add fonts, add structure for btn, 7 set from 50 is done

--- a/src/index.html
+++ b/src/index.html
@@ -25,26 +25,112 @@
   <meta name="msapplication-config" content="img/favicon/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
   <link href="favicon.ico" rel="shortcut icon">
+  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet" media="all">
 </head>
 <body>
-  <div class="container">
+  <div class="container text-center">
+    <!--.row
+    .col-lg-12: h2.set Set-01
+    .col-lg-12
+      each val, index in colors
+        .col-lg-3
+          - var shapeClass = 'btn--' + val;
+          //- var fontClass = classIconSet1[index];
+          - var fontClass = 'fa-rocket';
+          span.btn.btn--shape1(class=shapeClass)
+            span.btn--shape1__inner: i.fa(class=fontClass)
+            | Button
+    -->
+    <!--.row
+    .col-lg-12: h2.set Set-02
+    .col-lg-12
+      each val, index in colors
+        .col-lg-3
+          - var shapeClass = 'btn--' + val;
+          //- var fontClass = classIconSet1[index];
+          - var fontClass = 'fa-download';
+          span.btn.btn--shape2(class=shapeClass)
+            span.btn--shape2__inner: i.fa(class=fontClass)
+            | Button
+    -->
+    <!--.row
+    .col-lg-12: h2.set Set-04
+    .col-lg-12
+      each val, index in colors
+        .col-lg-3
+          - var shapeClass = 'btn--' + val;
+          //- var fontClass = classIconSet1[index];
+          - var fontClass = 'fa-envelope';
+          span.btn.btn--shape4(class=shapeClass)
+            span.btn--shape4__inner: i.fa(class=fontClass)
+            | Button
+    -->
     <div class="row">
       <div class="col-lg-12">
-        <div class="col-lg-2"><span class="btn btn--yukon-gold">test</span>
-          <div class="btn btn--yukon-gold">test</div><a class="btn btn--yukon-gold" href="#">test</a>
-          <input class="btn btn--yukon-gold" type="submit" value="test">
-          <input class="btn btn--yukon-gold" type="reset" value="test">
-          <input class="btn btn--yukon-gold" type="button" value="test">
-          <button class="btn btn--yukon-gold" type="submit">test</button>
-          <button class="btn btn--yukon-gold" type="reset">test</button>
-          <button class="btn btn--yukon-gold" type="button">test</button>
+        <h2 class="set">Set-12</h2>
+      </div>
+      <div class="col-lg-12">
+        <div class="col-lg-3"><span class="btn btn--shape12 btn--blue-bibbon"><span class="btn--shape12__inner-left"></span>Button<span class="btn--shape12__inner-right"></span></span>
         </div>
-        <div class="col-lg-2"><span class="btn btn--bourbon">test</span></div>
-        <div class="col-lg-2"><span class="btn btn--brick-red">test</span></div>
-        <div class="col-lg-2"><span class="btn btn--curious-blue">test</span></div>
-        <div class="col-lg-2"><span class="btn btn--blue-bibbon">test</span></div>
-        <div class="col-lg-2"><span class="btn btn--la-palma">test</span></div>
+        <div class="col-lg-3"><span class="btn btn--shape12 btn--curious-blue"><span class="btn--shape12__inner-left"></span>Button<span class="btn--shape12__inner-right"></span></span>
+        </div>
+        <div class="col-lg-3"><span class="btn btn--shape12 btn--purple-heart"><span class="btn--shape12__inner-left"></span>Button<span class="btn--shape12__inner-right"></span></span>
+        </div>
+        <div class="col-lg-3"><span class="btn btn--shape12 btn--yukon-gold"><span class="btn--shape12__inner-left"></span>Button<span class="btn--shape12__inner-right"></span></span>
+        </div>
+        <div class="col-lg-3"><span class="btn btn--shape12 btn--la-palma"><span class="btn--shape12__inner-left"></span>Button<span class="btn--shape12__inner-right"></span></span>
+        </div>
+        <div class="col-lg-3"><span class="btn btn--shape12 btn--bourbon"><span class="btn--shape12__inner-left"></span>Button<span class="btn--shape12__inner-right"></span></span>
+        </div>
+        <div class="col-lg-3"><span class="btn btn--shape12 btn--citron"><span class="btn--shape12__inner-left"></span>Button<span class="btn--shape12__inner-right"></span></span>
+        </div>
+        <div class="col-lg-3"><span class="btn btn--shape12 btn--fire"><span class="btn--shape12__inner-left"></span>Button<span class="btn--shape12__inner-right"></span></span>
+        </div>
+        <div class="col-lg-3"><span class="btn btn--shape12 btn--brick-red"><span class="btn--shape12__inner-left"></span>Button<span class="btn--shape12__inner-right"></span></span>
+        </div>
+        <div class="col-lg-3"><span class="btn btn--shape12 btn--luxor-gold"><span class="btn--shape12__inner-left"></span>Button<span class="btn--shape12__inner-right"></span></span>
+        </div>
+        <div class="col-lg-3"><span class="btn btn--shape12 btn--tuscany"><span class="btn--shape12__inner-left"></span>Button<span class="btn--shape12__inner-right"></span></span>
+        </div>
+        <div class="col-lg-3"><span class="btn btn--shape12 btn--caribbean-green"><span class="btn--shape12__inner-left"></span>Button<span class="btn--shape12__inner-right"></span></span>
+        </div>
+        <div class="col-lg-3"><span class="btn btn--shape12 btn--blue-bell"><span class="btn--shape12__inner-left"></span>Button<span class="btn--shape12__inner-right"></span></span>
+        </div>
+        <div class="col-lg-3"><span class="btn btn--shape12 btn--mexican-red"><span class="btn--shape12__inner-left"></span>Button<span class="btn--shape12__inner-right"></span></span>
+        </div>
+        <div class="col-lg-3"><span class="btn btn--shape12 btn--cardinal"><span class="btn--shape12__inner-left"></span>Button<span class="btn--shape12__inner-right"></span></span>
+        </div>
+        <div class="col-lg-3"><span class="btn btn--shape12 btn--sycamore"><span class="btn--shape12__inner-left"></span>Button<span class="btn--shape12__inner-right"></span></span>
+        </div>
+        <div class="col-lg-3"><span class="btn btn--shape12 btn--bilbao"><span class="btn--shape12__inner-left"></span>Button<span class="btn--shape12__inner-right"></span></span>
+        </div>
+        <div class="col-lg-3"><span class="btn btn--shape12 btn--orient"><span class="btn--shape12__inner-left"></span>Button<span class="btn--shape12__inner-right"></span></span>
+        </div>
+        <div class="col-lg-3"><span class="btn btn--shape12 btn--ming"><span class="btn--shape12__inner-left"></span>Button<span class="btn--shape12__inner-right"></span></span>
+        </div>
+        <div class="col-lg-3"><span class="btn btn--shape12 btn--blue-chill"><span class="btn--shape12__inner-left"></span>Button<span class="btn--shape12__inner-right"></span></span>
+        </div>
+        <div class="col-lg-3"><span class="btn btn--shape12 btn--purple-heart-dark"><span class="btn--shape12__inner-left"></span>Button<span class="btn--shape12__inner-right"></span></span>
+        </div>
+        <div class="col-lg-3"><span class="btn btn--shape12 btn--rope"><span class="btn--shape12__inner-left"></span>Button<span class="btn--shape12__inner-right"></span></span>
+        </div>
+        <div class="col-lg-3"><span class="btn btn--shape12 btn--claret"><span class="btn--shape12__inner-left"></span>Button<span class="btn--shape12__inner-right"></span></span>
+        </div>
+        <div class="col-lg-3"><span class="btn btn--shape12 btn--seance"><span class="btn--shape12__inner-left"></span>Button<span class="btn--shape12__inner-right"></span></span>
+        </div>
+        <div class="col-lg-3"><span class="btn btn--shape12 btn--jewel"><span class="btn--shape12__inner-left"></span>Button<span class="btn--shape12__inner-right"></span></span>
+        </div>
+        <div class="col-lg-3"><span class="btn btn--shape12 btn--go-ben"><span class="btn--shape12__inner-left"></span>Button<span class="btn--shape12__inner-right"></span></span>
+        </div>
+        <div class="col-lg-3"><span class="btn btn--shape12 btn--yukon-gold-dark"><span class="btn--shape12__inner-left"></span>Button<span class="btn--shape12__inner-right"></span></span>
+        </div>
+        <div class="col-lg-3"><span class="btn btn--shape12 btn--lochmara"><span class="btn--shape12__inner-left"></span>Button<span class="btn--shape12__inner-right"></span></span>
+        </div>
+        <div class="col-lg-3"><span class="btn btn--shape12 btn--pirate-gold"><span class="btn--shape12__inner-left"></span>Button<span class="btn--shape12__inner-right"></span></span>
+        </div>
+        <div class="col-lg-3"><span class="btn btn--shape12 btn--green-haze"><span class="btn--shape12__inner-left"></span>Button<span class="btn--shape12__inner-right"></span></span>
+        </div>
       </div>
     </div>
   </div>
